[package]
name = "zui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
wgpu = "0.14"
pollster = "0.2.4"
log = "0.4.17"
env_logger = "0.9.0"
glam = "0.8.5"
fontdue = { version = "0.7.2" }
rustc-hash = { version = "1.1.0" }
rectangle-pack = { version = "0.4.2" }
image = { version = "0.24", default-features = false, features = ["png"] }
rand = { version = "0.8.5" }