[package]
name = "zui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = false

# enabling optimisation for all dependencies for development build
[profile.dev.package."*"]
opt-level = 3

# enabling minor optimisations in debug mode
[profile.dev]
opt-level = 1


[dependencies]
winit = "0.29"
wgpu = "0.19"
pollster = "0.2.4"
log = "0.4.17"
env_logger = "0.9.0"
glam = "0.24.0"
fontdue = { version = "0.7.2" }
rustc-hash = { version = "1.1.0" }
image = { version = "0.24", default-features = false, features = ["png"] }
rand = { version = "0.8.5" }
crunch = "0.5.3"

# removing crunch for now, may be added back when images are implemented
# crunch = { version = "0.5.3" }
